--- a/main_page/index.html
+++ b/main_page/index.html
@@ -67,7 +67,7 @@
                 
                 <a class="back">
                     <h2>How might that evidence be collected?</h2>
-                    <ul><li>To collect the evidence used to find black holes scientists generally rely on telescopes and satelites both on earth and in space.</li><li>To obtain the image of black hole <b>IRAS 13224-3809</b> scientists used many telescopes all observing the same point in space for 10 days, they then compiled over 5 petabytes of data in to one image.</li><li>Scientist have been able to observe the collision of two black holes using a Laser Interferometer Gravitational-wave Observatory detectors.<b>(LIGO)</b>.</li></ul>
+                    <ul><li>To collect the evidence used to find black holes scientists generally rely on telescopes and satelites both on earth and in space.</li><li>To obtain the image of black hole <b>IRAS 13224-3809</b> scientists used many telescopes all observing the same point in space for 10 days, they then compiled over 5 petabytes of data in to one image.</li><li>Scientist have been able to observe the collision of two black holes using a Laser Interferometer Gravitational-wave Observatory detectors.<b>(LIGO)</b></li></ul>
                 </a>
             </div>
         </main>
