--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 console.log(e.key)
                 if(keys.indexOf("ArrowUpArrowUpArrowDownArrowDownArrowLeftArrowRightArrowLeftArrowRightbaEnter") >= 0){
                     keys = ""
-                    window.location.href = "https://en.wikipedia.org/wiki/Konami_Code";
+                    window.location.href = "sources.html";
                 }
             }
             
